# my-dwm

./: .gitignore  CMakeLists.txt  config.h  dwm.1  dwm.c  ucmds.h
